--- a/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
+++ b/ajite/ajite/Storyboards/Base.lproj/Main.storyboard
@@ -19,32 +19,32 @@
                             <userLayoutGuide location="398" affinity="minX"/>
                         </userGuides>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="background image" translatesAutoresizingMaskIntoConstraints="NO" id="eye-A9-Spa">
-                                <rect key="frame" x="-16" y="-4" width="446" height="904"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background image" translatesAutoresizingMaskIntoConstraints="NO" id="i1h-vN-N7T">
+                                <rect key="frame" x="-12" y="-31" width="437" height="927"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sign in back" translatesAutoresizingMaskIntoConstraints="NO" id="HRF-tU-W65">
-                                <rect key="frame" x="0.0" y="117" width="414" height="811"/>
-                            </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="applogo-ajite" translatesAutoresizingMaskIntoConstraints="NO" id="oMd-BC-PhS">
-                                <rect key="frame" x="146" y="108" width="123" height="97"/>
-                            </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="Onb-IK-pcj">
-                                <rect key="frame" x="0.0" y="213" width="414" height="818"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Onb-IK-pcj">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="37" translatesAutoresizingMaskIntoConstraints="NO" id="UFF-pV-Uz2">
-                                        <rect key="frame" x="0.0" y="8" width="414" height="299"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xWe-18-lMM">
+                                        <rect key="frame" x="0.0" y="8" width="414" height="128"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="128" id="LEb-4m-kJC"/>
+                                        </constraints>
+                                    </view>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="41" translatesAutoresizingMaskIntoConstraints="NO" id="UFF-pV-Uz2">
+                                        <rect key="frame" x="0.0" y="144" width="414" height="299"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign In" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XXR-8w-wt6">
                                                 <rect key="frame" x="16" y="8" width="382" height="43"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="35"/>
-                                                <color key="textColor" red="0.68235294120000001" green="0.65098039220000004" blue="0.96470588239999999" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                                 <color key="shadowColor" white="0.67000000000000004" alpha="0.68214000355113635" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <size key="shadowOffset" width="2" height="1"/>
                                             </label>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="KWJ-dC-X6v">
-                                                <rect key="frame" x="16" y="88" width="382" height="116"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="KWJ-dC-X6v">
+                                                <rect key="frame" x="16" y="92" width="382" height="108"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LvD-jD-Q1q" customClass="DesignableView" customModule="ajite" customModuleProvider="target">
                                                         <rect key="frame" x="0.0" y="0.0" width="382" height="50"/>
@@ -78,7 +78,7 @@
                                                         </userDefinedRuntimeAttributes>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u6u-du-pec" customClass="DesignableView" customModule="ajite" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="66" width="382" height="50"/>
+                                                        <rect key="frame" x="0.0" y="58" width="382" height="50"/>
                                                         <subviews>
                                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FEt-YK-s7s">
                                                                 <rect key="frame" x="0.0" y="0.0" width="382" height="50"/>
@@ -132,36 +132,23 @@
                                         <edgeInsets key="layoutMargins" top="8" left="16" bottom="8" right="16"/>
                                     </stackView>
                                     <view contentMode="scaleToFill" verticalHuggingPriority="200" translatesAutoresizingMaskIntoConstraints="NO" id="JLZ-m7-AMb">
-                                        <rect key="frame" x="0.0" y="323" width="414" height="453"/>
+                                        <rect key="frame" x="0.0" y="451" width="414" height="359"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </view>
                                 </subviews>
                                 <edgeInsets key="layoutMargins" top="8" left="0.0" bottom="8" right="0.0"/>
                             </stackView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="applogo" translatesAutoresizingMaskIntoConstraints="NO" id="ZjT-MX-PNG">
-                                <rect key="frame" x="168" y="50" width="78" height="114"/>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="ZjT-MX-PNG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="6" id="4lw-le-yVA"/>
-                            <constraint firstItem="oMd-BC-PhS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="146" id="60s-lh-8lJ"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="oMd-BC-PhS" secondAttribute="trailing" constant="145" id="6b7-GQ-AEh"/>
                             <constraint firstItem="Onb-IK-pcj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="BFz-xc-Gkk"/>
-                            <constraint firstItem="HRF-tU-W65" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="PvM-qh-ova"/>
-                            <constraint firstItem="HRF-tU-W65" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="QvZ-SU-eme"/>
-                            <constraint firstAttribute="bottom" secondItem="HRF-tU-W65" secondAttribute="bottom" constant="-32" id="b3H-Wy-kk3"/>
-                            <constraint firstItem="oMd-BC-PhS" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="64" id="bGf-yc-Jic"/>
-                            <constraint firstItem="ZjT-MX-PNG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="168" id="bZ2-sM-09C"/>
-                            <constraint firstItem="HRF-tU-W65" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="f0V-rH-BVq"/>
-                            <constraint firstItem="Onb-IK-pcj" firstAttribute="top" secondItem="oMd-BC-PhS" secondAttribute="bottom" constant="8" id="ftd-sd-nPP"/>
-                            <constraint firstItem="HRF-tU-W65" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="73" id="hry-ym-V0T"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Onb-IK-pcj" secondAttribute="bottom" constant="-169" id="j0J-3R-jql"/>
-                            <constraint firstAttribute="bottom" secondItem="HRF-tU-W65" secondAttribute="bottom" constant="-32" id="mRc-xZ-fYz"/>
-                            <constraint firstItem="Onb-IK-pcj" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="169" id="o6v-PP-qBs"/>
-                            <constraint firstItem="Onb-IK-pcj" firstAttribute="top" secondItem="ZjT-MX-PNG" secondAttribute="bottom" constant="49" id="vms-r3-txm"/>
-                            <constraint firstItem="HRF-tU-W65" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="73" id="vnz-7b-eg7"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ZjT-MX-PNG" secondAttribute="trailing" constant="168" id="wDA-sb-HED"/>
-                            <constraint firstItem="HRF-tU-W65" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="wFf-ZV-c3q"/>
+                            <constraint firstItem="i1h-vN-N7T" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="-12" id="Pxl-t3-DfH"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Onb-IK-pcj" secondAttribute="bottom" id="j0J-3R-jql"/>
+                            <constraint firstAttribute="trailing" secondItem="i1h-vN-N7T" secondAttribute="trailing" constant="-11" id="jfJ-b8-5f6"/>
+                            <constraint firstItem="Onb-IK-pcj" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="mMP-xh-oli"/>
+                            <constraint firstItem="Onb-IK-pcj" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="o6v-PP-qBs"/>
+                            <constraint firstItem="i1h-vN-N7T" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="-31" id="qNt-hg-sIT"/>
+                            <constraint firstAttribute="bottom" secondItem="i1h-vN-N7T" secondAttribute="bottom" id="suJ-U8-XbP"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Onb-IK-pcj" secondAttribute="trailing" id="zPX-eR-HiB"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -169,13 +156,10 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.23188405797103" y="89.0625"/>
+            <point key="canvasLocation" x="136.80000000000001" y="89.408866995073893"/>
         </scene>
     </scenes>
     <resources>
-        <image name="applogo" width="210" height="297"/>
-        <image name="applogo-ajite" width="567" height="567"/>
         <image name="background image" width="500" height="889"/>
-        <image name="sign in back" width="1125" height="1575"/>
     </resources>
 </document>
